--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -82,12 +82,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4008, 11)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Paso 1\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "54d4f165",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer                      object\n",
+       "ST                            object\n",
+       "GENDER                        object\n",
+       "Education                     object\n",
+       "Customer Lifetime Value       object\n",
+       "Income                       float64\n",
+       "Monthly Premium Auto         float64\n",
+       "Number of Open Complaints     object\n",
+       "Policy Type                   object\n",
+       "Vehicle Class                 object\n",
+       "Total Claim Amount           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Paso 2\n",
+    "\n",
+    "df.dtypes\n",
+    "\n",
+    "\"\"\"\n",
+    "CLV debería ser un float.\n",
+    "Number of Open Complaints debería ser un float.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5e2d2e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer                     1071\n",
+       "ST                              8\n",
+       "GENDER                          5\n",
+       "Education                       6\n",
+       "Customer Lifetime Value      1027\n",
+       "Income                        774\n",
+       "Monthly Premium Auto          132\n",
+       "Number of Open Complaints       6\n",
+       "Policy Type                     3\n",
+       "Vehicle Class                   6\n",
+       "Total Claim Amount            761\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Paso 3\n",
+    "\n",
+    "df.nunique()\n",
+    "\n",
+    "#Las columnas de categoría son: ST, GENDER, Education, Policy Type, y Vehicle Class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "989173f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' 'Cali' 'AZ' 'WA'\n",
+      " nan]\n",
+      "[nan 'F' 'M' 'Femal' 'Male' 'female']\n",
+      "['Master' 'Bachelor' 'High School or Below' 'College' 'Bachelors' 'Doctor'\n",
+      " nan]\n",
+      "['Personal Auto' 'Corporate Auto' 'Special Auto' nan]\n",
+      "['Four-Door Car' 'Two-Door Car' 'SUV' 'Luxury SUV' 'Sports Car'\n",
+      " 'Luxury Car' nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 3\n",
+    "\n",
+    "print(df.ST.unique())\n",
+    "print(df.GENDER.unique())\n",
+    "print(df.Education.unique())\n",
+    "print(df[\"Policy Type\"].unique())\n",
+    "print(df[\"Vehicle Class\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c8fe211d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El rango de Income es:\n",
+      "0.0 99960.0\n",
+      "El rango de Monthly Premium Auto es:\n",
+      "61.0 35354.0\n",
+      "El rango de Total Claim Amount es:\n",
+      "0.382107 2893.239678\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"El rango de Income es:\")\n",
+    "print(df.Income.min(), df.Income.max())\n",
+    "print(\"El rango de Monthly Premium Auto es:\")\n",
+    "print(df[\"Monthly Premium Auto\"].min(), df[\"Monthly Premium Auto\"].max())\n",
+    "print(\"El rango de Total Claim Amount es:\")\n",
+    "print(df[\"Total Claim Amount\"].min(), df[\"Total Claim Amount\"].max())\n",
+    "\n",
+    "# No podemos obtener el rango de Customer Lifetime Value porque los datos son de tipo objeto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bec45720",
+   "metadata": {},
+   "source": [
+    "Paso 4\n",
+    "\n",
+    "Compute summary statistics such as mean, median, mode, standard deviation, and quartiles to understand the central tendency and distribution of the data for numerical columns. You should also provide your conclusions based on these summary statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "23645ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Monthly Premium Auto</th>\n",
+       "      <th>Total Claim Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1071.000000</td>\n",
+       "      <td>1071.000000</td>\n",
+       "      <td>1071.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>39295.701214</td>\n",
+       "      <td>193.234360</td>\n",
+       "      <td>404.986909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>30469.427060</td>\n",
+       "      <td>1601.190369</td>\n",
+       "      <td>293.027260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>0.382107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>14072.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>202.157702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>36234.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>354.729129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>64631.000000</td>\n",
+       "      <td>109.500000</td>\n",
+       "      <td>532.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>99960.000000</td>\n",
+       "      <td>35354.000000</td>\n",
+       "      <td>2893.239678</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Income  Monthly Premium Auto  Total Claim Amount\n",
+       "count   1071.000000           1071.000000         1071.000000\n",
+       "mean   39295.701214            193.234360          404.986909\n",
+       "std    30469.427060           1601.190369          293.027260\n",
+       "min        0.000000             61.000000            0.382107\n",
+       "25%    14072.000000             68.000000          202.157702\n",
+       "50%    36234.000000             83.000000          354.729129\n",
+       "75%    64631.000000            109.500000          532.800000\n",
+       "max    99960.000000          35354.000000         2893.239678"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Paso 4\n",
+    "\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb4ad80",
+   "metadata": {},
+   "source": [
+    "Compute summary statistics for categorical columns and providing your conclusions based on these statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0a671c11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Washington' 'Arizona' 'Nevada' 'California' 'Oregon' 'Cali' 'AZ' 'WA'\n",
+      " nan]\n",
+      "[nan 'F' 'M' 'Femal' 'Male' 'female']\n",
+      "['Master' 'Bachelor' 'High School or Below' 'College' 'Bachelors' 'Doctor'\n",
+      " nan]\n",
+      "['Personal Auto' 'Corporate Auto' 'Special Auto' nan]\n",
+      "['Four-Door Car' 'Two-Door Car' 'SUV' 'Luxury SUV' 'Sports Car'\n",
+      " 'Luxury Car' nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 5\n",
+    "\n",
+    "#Las columnas de categoría son: ST, GENDER, Education, Policy Type, y Vehicle Class.\n",
+    "\n",
+    "print(df.ST.unique())\n",
+    "print(df.GENDER.unique())\n",
+    "print(df.Education.unique())\n",
+    "print(df[\"Policy Type\"].unique())\n",
+    "print(df[\"Vehicle Class\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f420c130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columnas Categóricas:\n",
+      "['ST', 'GENDER', 'Education', 'Policy Type', 'Vehicle Class']\n",
+      "\n",
+      "Estadísticas de Columnas Categóricas:\n",
+      "\n",
+      "Columna: ST\n",
+      "ST\n",
+      "Oregon        320\n",
+      "California    211\n",
+      "Arizona       186\n",
+      "Cali          120\n",
+      "Nevada         98\n",
+      "Washington     81\n",
+      "WA             30\n",
+      "AZ             25\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Columna: GENDER\n",
+      "GENDER\n",
+      "F         457\n",
+      "M         413\n",
+      "Male       39\n",
+      "female     28\n",
+      "Femal      17\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Columna: Education\n",
+      "Education\n",
+      "Bachelor                324\n",
+      "College                 313\n",
+      "High School or Below    296\n",
+      "Master                   94\n",
+      "Doctor                   37\n",
+      "Bachelors                 7\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Columna: Policy Type\n",
+      "Policy Type\n",
+      "Personal Auto     780\n",
+      "Corporate Auto    234\n",
+      "Special Auto       57\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Columna: Vehicle Class\n",
+      "Vehicle Class\n",
+      "Four-Door Car    576\n",
+      "Two-Door Car     205\n",
+      "SUV              199\n",
+      "Sports Car        57\n",
+      "Luxury SUV        20\n",
+      "Luxury Car        14\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "columnas_categoricas = ['ST', 'GENDER', 'Education', 'Policy Type', 'Vehicle Class']\n",
+    "\n",
+    "# Asegurarnos de que las columnas existen en el DataFrame\n",
+    "columnas_categoricas = [col for col in columnas_categoricas if col in df.columns]\n",
+    "\n",
+    "print(\"Columnas Categóricas:\")\n",
+    "print(columnas_categoricas)\n",
+    "\n",
+    "# Calcular estadísticas resumidas para las columnas categóricas\n",
+    "print(\"\\nEstadísticas de Columnas Categóricas:\")\n",
+    "for columna in columnas_categoricas:\n",
+    "    conteo_categorias = df[columna].value_counts()\n",
+    "    print(f\"\\nColumna: {columna}\")\n",
+    "    print(conteo_categorias)"
    ]
   },
   {
@@ -251,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
