--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "(4008, 11)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,28 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "54d4f165",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Customer                      object\n",
-       "ST                            object\n",
-       "GENDER                        object\n",
-       "Education                     object\n",
-       "Customer Lifetime Value       object\n",
-       "Income                       float64\n",
-       "Monthly Premium Auto         float64\n",
-       "Number of Open Complaints     object\n",
-       "Policy Type                   object\n",
-       "Vehicle Class                 object\n",
-       "Total Claim Amount           float64\n",
-       "dtype: object"
+       "'\\nCLV debería ser un float.\\nNumber of Open Complaints debería ser un float.\\n\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "5e2d2e43",
    "metadata": {},
    "outputs": [
@@ -171,7 +160,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "989173f1",
    "metadata": {},
    "outputs": [
@@ -217,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "c8fe211d",
    "metadata": {},
    "outputs": [
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "23645ecb",
    "metadata": {},
    "outputs": [
@@ -352,7 +341,7 @@
        "max    99960.000000          35354.000000         2893.239678"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +349,8 @@
    "source": [
     "# Paso 4\n",
     "\n",
-    "df.describe()"
+    "df.describe()\n",
+    "\n"
    ]
   },
   {
@@ -373,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "0a671c11",
    "metadata": {},
    "outputs": [
@@ -406,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "f420c130",
    "metadata": {},
    "outputs": [
@@ -415,7 +405,7 @@
      "output_type": "stream",
      "text": [
       "Columnas Categóricas:\n",
-      "['ST', 'GENDER', 'Education', 'Policy Type', 'Vehicle Class']\n",
+      "['ST', 'GENDER', 'Education', 'Number of Open Complaints', 'Policy Type', 'Vehicle Class']\n",
       "\n",
       "Estadísticas de Columnas Categóricas:\n",
       "\n",
@@ -450,6 +440,16 @@
       "Bachelors                 7\n",
       "Name: count, dtype: int64\n",
       "\n",
+      "Columna: Number of Open Complaints\n",
+      "Number of Open Complaints\n",
+      "1/0/00    830\n",
+      "1/1/00    138\n",
+      "1/2/00     50\n",
+      "1/3/00     34\n",
+      "1/4/00     13\n",
+      "1/5/00      6\n",
+      "Name: count, dtype: int64\n",
+      "\n",
       "Columna: Policy Type\n",
       "Policy Type\n",
       "Personal Auto     780\n",
@@ -470,7 +470,7 @@
     }
    ],
    "source": [
-    "columnas_categoricas = ['ST', 'GENDER', 'Education', 'Policy Type', 'Vehicle Class']\n",
+    "columnas_categoricas = ['ST', 'GENDER', 'Education', 'Number of Open Complaints', 'Policy Type', 'Vehicle Class']\n",
     "\n",
     "# Asegurarnos de que las columnas existen en el DataFrame\n",
     "columnas_categoricas = [col for col in columnas_categoricas if col in df.columns]\n",
@@ -484,6 +484,26 @@
     "    conteo_categorias = df[columna].value_counts()\n",
     "    print(f\"\\nColumna: {columna}\")\n",
     "    print(conteo_categorias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5f80341",
+   "metadata": {},
+   "source": [
+    "- La mayoría de clientes son de Oregon. La compañía parece no operar en todo el país ya que sólo aparecen unos pocos estados de los 50 que forman Estados Unidos.\n",
+    "\n",
+    "- Hay un error en la entrada de datos, ya que los estados de Washington como Arizona están categorizados de manera repetida, por lo que estas columnas deberían agruparse. Sucede lo mismo con el género de hombres y mujeres, con columnas repetidas que habría que agrupar.\n",
+    "\n",
+    "- La mayoría de clientes son mujeres, aunque no por mucho.\n",
+    "\n",
+    "- Las columnas 'Bachelor', 'College' y 'Bachelors' deberían agruparse ya que las tres se refieren a titulados universitarios.\n",
+    "\n",
+    "- La mayoría de clientes (830) no han efectuado ninguna reclamación.\n",
+    "\n",
+    "- Con diferencia, la mayoría de pólizas son de tipo \"personal auto\".\n",
+    "\n",
+    "- La mayoría de vehículos son de cuatro puertas, seguidos de vehículos de dos puertas."
    ]
   },
   {
@@ -512,12 +532,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2dca5073-4520-4f42-9390-4b92733284ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ST\n",
+      "AZ             25\n",
+      "WA             30\n",
+      "Washington     81\n",
+      "Nevada         98\n",
+      "Cali          120\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "ubicaciones_frecuencias = df[\"ST\"].value_counts()\n",
+    "ubicaciones_frecuencias_asc = ubicaciones_frecuencias.sort_values()\n",
+    "primeras_filas = ubicaciones_frecuencias_asc.head()\n",
+    "print(primeras_filas)"
    ]
   },
   {
@@ -542,12 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "bcfad6c1-9af2-4b0b-9aa9-0dc5c17473c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Policy Type\n",
+      "Personal Auto    780\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "tipos_poliza = df['Policy Type'].value_counts()\n",
+    "print(tipos_poliza.head(1))\n"
    ]
   },
   {
@@ -572,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0c0563cf-6f8b-463d-a321-651a972f82e5",
    "metadata": {},
    "outputs": [],
@@ -622,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b731bca6-a760-4860-a27b-a33efa712ce0",
    "metadata": {},
    "outputs": [],
