--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "(4008, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "54d4f165",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "'\\nCLV debería ser un float.\\nNumber of Open Complaints debería ser un float.\\n\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5e2d2e43",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "989173f1",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c8fe211d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "23645ecb",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
        "max    99960.000000          35354.000000         2893.239678"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0a671c11",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f420c130",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "2dca5073-4520-4f42-9390-4b92733284ed",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "bcfad6c1-9af2-4b0b-9aa9-0dc5c17473c0",
    "metadata": {},
    "outputs": [
@@ -623,12 +623,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0c0563cf-6f8b-463d-a321-651a972f82e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingreso promedio para Personal Auto: 38180.69871794872\n",
+      "Ingreso promedio para Corporate Auto: 41390.31196581197\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df = pd.read_csv(url)\n",
+    "\n",
+    "personal_auto_df = df.loc[df['Policy Type'] == 'Personal Auto']\n",
+    "\n",
+    "corporate_auto_df = df.loc[df['Policy Type'] == 'Corporate Auto']\n",
+    "\n",
+    "avg_income_personal_auto = personal_auto_df['Income'].mean()\n",
+    "avg_income_corporate_auto = corporate_auto_df['Income'].mean()\n",
+    "\n",
+    "print(\"Ingreso promedio para Personal Auto:\", avg_income_personal_auto)\n",
+    "print(\"Ingreso promedio para Corporate Auto:\", avg_income_corporate_auto)"
    ]
   },
   {
@@ -673,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b731bca6-a760-4860-a27b-a33efa712ce0",
    "metadata": {},
    "outputs": [],
